# DACTI

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: documentation.yml
_sources/: index.rst
cases/: cylinder.toml  cylinderg.toml  diamond.toml  diamond.tomlt  oscDrop.toml  plate.toml  plate.tomlt  scramjet.toml  scramjetviscous.toml  shockBubble.toml  shockDrop3d.toml  wing.toml
cases/stl/: diamond.stl  ellipse_long.stl  scramjet.stl  sphere.stl  wing.stl
doc/: Doxyfile.in
doc/source/: conf.py  getting_started.rst
ext/: CMakeLists.txt
src/examples/: aero_test_2D.cpp  multi2d.cpp  ns3d.cpp
src/lib/: dacti.hpp
src/lib/config/: config.cpp  config.hpp  util.hpp
src/lib/core/: linalg.hpp  profile.hpp  types.hpp  util.hpp
src/lib/driver/: default_driver.hpp  gl_driver.hpp
src/lib/driver/gl/: gl.hpp  glfw.hpp  util.hpp
src/lib/driver/io/: htg_writer.hpp  vtu_writer.hpp
src/lib/driver/observer/: aero_force.hpp  common.hpp  drop_energy.hpp
src/lib/integrator/: boundary.hpp  cell.hpp  children.hpp  domain.hpp  error_estimators.hpp  integrator.hpp  neighbor.hpp  node.hpp  slope_limiters.hpp
src/lib/integrator/impl/: acti_utils.hpp  adaptive_refinement.hpp  cell_update.hpp  flux.hpp  integrate.hpp  normal_curvature.hpp  slopes.hpp  smooth.hpp
src/lib/model/: common.hpp  euler.hpp  multi.hpp  navier_stokes.hpp
src/lib/scene/: geometry.hpp  geometry_data.cpp  geometry_data.hpp  object_mesh.cpp  object_mesh.hpp  scene.cpp  scene.hpp
vis/: airfoil.py  colormaps.py  droplet_energy.py  lift.py  plotlab.py  run_diamond.py  run_plate.py  shockstate.py  temp.py
vis/paraview/: euler.py  htg3d.py  navier_stokes.py
